--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
+cargo-features = ["edition2024"]
+
 [package]
 name = "petpet_rs"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
+
+[[bin]]
+name = "petpet"
+path = "src/root.rs"
 
 [dependencies]
 actix-web = "4.0"
